[gd_scene load_steps=8 format=2]

[ext_resource path="res://SplashScene/splashScene.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[node name="splashSceneMain" type="Node"]
script = ExtResource( 1 )

[node name="darverokLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "DarverokDev"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="darverokLabelTween" type="Tween" parent="."]

[node name="errorLoadingMenu" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -626.0
margin_bottom = 635.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="errorPanel" type="Panel" parent="errorLoadingMenu"]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 1161.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textMargin" type="MarginContainer" parent="errorLoadingMenu"]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 1161.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="errorLabel" type="Label" parent="errorLoadingMenu/textMargin"]
margin_left = 50.0
margin_top = 50.0
margin_right = 830.0
margin_bottom = 1011.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonContainer" type="Control" parent="errorLoadingMenu"]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 1161.0

[node name="xButton" type="Button" parent="errorLoadingMenu/buttonContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -131.0
margin_right = 85.0
margin_bottom = -38.9999
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="errorMenuTween" type="Tween" parent="."]
[connection signal="pressed" from="errorLoadingMenu/buttonContainer/xButton" to="." method="_on_xButton_pressed"]
